<resources>
    <string name="app_name">NCKU Multimedia Human-Computer Communication Laboratory</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="wello">wello</string>
    <string name="alarm">Alarm clock</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="action_login">Login</string>
    <string name="loading">Loading information</string>
    <string name="wait">please wait</string>
    <string name="stn_changetime">Change time</string>
    <string name="stn_chooseweek">Choose week</string>
    <string name="stn_chooseday">Choose a day</string>
    <string name="stn_today">Today</string>
    <string name="stn_now">now</string>
    <string name="stn_week">week</string>
    <string name="stn_confirmation_txt">Do you want to exit without saving?</string>
    <string name="stn_confirmation">Confirmation</string>
    <string name="stn_save_alarm">Save</string>
    <string name="stn_quit_without_saving">Quit</string>
    <string name="stn_note_once">If you only want to beep once, please do not select the day of the week</string>
    <string name="stn_note_noweek">If you do not select a week, the alarm will go off every week. </string>
    <string name="stn_create">Reserved</string>
    <string name="stn_cancel">Cancel</string>
    <string name="mon">one</string>
    <string name="tue">Two</string>
    <string name="wed">Three</string>
    <string name="thu">Four</string>
    <string name="fri">Five</string>
    <string name="sat">Six</string>
    <string name="sun">Day</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="once">once</string>
    <string name="everyday">everyday</string>
    <string name="weekends">Weekends</string>
    <string name="weekdays">Weekdays</string>
    <string name="ev">even</string>
    <string name="od">odd</string>
    <string name="even">even</string>
    <string name="odd">odd number</string>
    <string name="everyweek">Weekly</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>
    <string name="alarm_turnon">Answer Question</string>
    <string name="alarm_turnoff">Turn off alarm</string>
    <string name="alarm_setaside">Snooze 5 minutes</string>
    <string name="off">off</string>
    <string name="on">On</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="InStorage">Storing</string>
    <string name="Send">Confirm Send</string>
    <string name="no_alarms">No alarms, would you like to add one?</string>
    <string name="not_found">[day not found]</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_settings">New alarms</string>
    <string name="feedbacktitle">Anything to tell us?\nLeave a comment below!</string>
    <string name="waterdroplets">Waterdroplets;</string>
    <string name="ChartEmotion">Emotion</string>
    <string name="ChartDailyMood">Daily Mood (0~6 points)</string>
    <string name="ChartSleep">Sleep time (0~23 hours)</string>
    <string name="ChartGetup">Get up time (0~23 hours)</string>
    <string name="ChartLong">How long have you slept</string>
    <string name="ChartGPS">GPS(km)</string>
    <string name="ExPointOne">Redeem one</string>
    <string name="ExPointAll">Exchange All</string>
    <string name="ExTextView"></string>
    <string name="ExTextView2">Every 100 points can be exchanged for a 7-11 gift certificate of 100 yuan, which can be exchanged with Ms. Tsang Yuqing when returning to the clinic. You can use Line to contact first</string>
    <string name="ExSpinner"> </string>
    <string name="HistPoint">Exchange Record</string>
    <string name="dailymood">Daily Mood</string>
    <string name="wakeup">Wakeup time</string>
    <string name="sleep">Sleep time</string>
    <string name="emo_mark">Video mood</string>
    <string name="emo_voice">Recording emotions</string>
    <string name="emo_av">recording emotions</string>
    <string name="selfscale">Self-rating scale</string>
    <string name="dass">DASS scale</string>
    <string name="asrm">ASRM scale</string>
    <string name="angry">Angry</string>
    <string name="boredom">boring</string>
    <string name="disgust">Disgust</string>
    <string name="anxiety">Anxiety</string>
    <string name="happiness">happy</string>
    <string name="sadness">sadness</string>
    <string name="surprised">surprised</string>
    <string name="RecordingStart">Click on the microphone - describe the recent situation</string>
    <string name="RecordingFinish">Click again-end recording</string>
    <string name="collec_fini">Goal completed</string>
    <string name="collec_unfini">Unfinished goal</string>
    <string name="OpenGPS">Please open GPS link</string>
    <string name="OpenGPSMessage">In order to improve the accuracy of positioning and serve you better, please turn on GPS</string>
    <string name="StartedGPS">GPS service started</string>
    <string name="StartupGPS">GPS service startup completed</string>
    <string name="LoadIn">Login</string>
    <string-array name="sleepandgetup">
        <item>Wake up time</item><item>Sleep time</item>
    </string-array>
    <string name="growthProgress">Growth Progress:</string>
    <string-array name="monarray">
        <item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item>
    </string-array>
    <string-array name="dayarray">
        <item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="hourarray">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item>
        <item>05</item><item>06</item><item>07</item><item>08</item><item>09</item>
        <item>10</item><item>11</item><item>12</item><item>13</item><item>14</item>
        <item>15</item><item>16</item><item>17</item><item>18</item><item>19</item>
        <item>20</item><item>21</item><item>22</item><item>23</item>
    </string-array>
    <string-array name="minarray">
        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item>
        <item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item>
        <item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
        <item>36</item><item>37</item><item>38</item><item>39</item><item>40</item>
        <item>41</item><item>42</item><item>43</item><item>44</item><item>45</item>
        <item>46</item><item>47</item><item>48</item><item>49</item><item>50</item>
        <item>51</item><item>52</item><item>53</item><item>54</item><item>55</item>
        <item>56</item><item>57</item><item>58</item><item>59</item>
    </string-array>
    <string-array name="PointText">
        <item>Accumulated points</item>
        <item>Daily mood, sleep record 1 time</item>
        <item>Sound and video emotional information recorded once</item>
        <item>GPS records 5 days a week</item>
        <item>20 days a month with GPS records</item>
        <item>28 days a month with GPS records</item>
        <item>There are 55 days of GPS records in two months</item>
        <item>3 months with GPS records for 80 days</item>
        <item>Daily mood, sleep record 5 days a week</item>
        <item>Daily mood, sleep record 20 days a month</item>
        <item>Daily mood, sleep record 28 days a month</item>
        <item>Daily mood and sleep records for 55 days for two months</item>
        <item>Daily mood and sleep records for 3 months for 80 days</item>
        <item>Sound and video emotional information is recorded 5 days a week</item>
        <item>Sound and video emotional information is recorded 20 days a month</item>
        <item>Sound and video emotional information is recorded 28 days a month</item>
        <item>Sound and video emotional information recorded for 55 days in two months</item>
        <item>Sound and video emotional information is recorded for 80 days for three months</item>
        <item>Fill out the weekly scale once</item>
        <item>Write the weekly scale 3 times a month</item>
        <item>Complete the weekly scale 7 times for two months</item>
        <item>Three months to fill out the weekly scale 12 times</item>
        <item>Daily mood, sleep, GPS, mood information for 5 days</item>
        <item>Daily mood, sleep, GPS, mood information for 20 days</item>
        <item>Daily mood, sleep, GPS, mood information for 28 days</item>
        <item>Daily mood, sleep, GPS, mood information for 55 days</item>
        <item>Daily mood, sleep, GPS, mood information for 80 days</item>
    </string-array>
</resources>