<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sourcey.materiallogindemo.twicePage.SongsActivity"
    tools:showIn="@layout/songs_layout">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChartDailyMood"
                android:textSize="25dp" />

            <com.sourcey.materiallogindemo.twicePage.KLineChart
                android:id="@+id/chartDailyMood"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:scaleX="100"></com.sourcey.materiallogindemo.twicePage.KLineChart>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChartSleep"
                android:textSize="25dp" />

            <com.sourcey.materiallogindemo.twicePage.KLineChart
                android:id="@+id/chartSleep"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:scaleX="100"></com.sourcey.materiallogindemo.twicePage.KLineChart>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChartGetup"
                android:textSize="25dp" />

            <com.sourcey.materiallogindemo.twicePage.KLineChart
                android:id="@+id/chartGetup"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:scaleX="100"></com.sourcey.materiallogindemo.twicePage.KLineChart>
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/ChartGPS"-->
                <!--android:textSize="25dp" />-->

            <!--<com.sourcey.materiallogindemo.twicePage.KLineChart-->
                <!--android:id="@+id/chartGPS"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="200dp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--tools:scaleX="100"></com.sourcey.materiallogindemo.twicePage.KLineChart>-->
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
